deploy-k8s/roles/deploy-application/files/production-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "guestbook.mstakx.io"
  namespace: "production"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
     paths:
      - backend:
           serviceName: frontend
           servicePort: 80
        path: /production(/|$)(.*)
