deploy-k8s/roles/deploy-application/files/staging-ingress.yaml
# Ingress Resource file for Staging Application
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "staging-guestbook.mstakx.io"
  namespace: "staging"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
     paths:
      - backend:
           serviceName: frontend
           servicePort: 80
        path: /staging(/|$)(.*)
